kubernetes/spire/base/deployment.yaml
---
# Source: spire/charts/spiffe-oidc-discovery-provider/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spire-spiffe-oidc-discovery-provider
  namespace: spire-server
  labels:
    helm.sh/chart: spiffe-oidc-discovery-provider-0.1.0
    app.kubernetes.io/name: spiffe-oidc-discovery-provider
    app.kubernetes.io/instance: spire
    app.kubernetes.io/version: "1.12.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: spiffe-oidc-discovery-provider
      app.kubernetes.io/instance: spire
  template:
    metadata:
      annotations:
        checksum/config: 8e8d6323d9c87c7ad8193e480a1b00367f665507d339b99a925d5818a9b2cc5f
      labels:
        app.kubernetes.io/name: spiffe-oidc-discovery-provider
        app.kubernetes.io/instance: spire
        release: spire
        release-namespace: spire-mgmt
        component: oidc-discovery-provider
    spec:
      serviceAccountName: spire-spiffe-oidc-discovery-provider
      securityContext:
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: spiffe-oidc-discovery-provider
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          image: "ghcr.io/spiffe/oidc-discovery-provider:1.12.0@sha256:85a4e8fc1ab76059f6d73837f4caa11f39847285551c166a5909601dfe620d4c"
          imagePullPolicy: IfNotPresent
          args:
            - -config
            - /run/spire/oidc/config/oidc-discovery-provider.conf
          ports:
            - containerPort: 8008
              name: healthz
            - containerPort: 8443
              name: https
          volumeMounts:
            - name: spiffe-workload-api
              mountPath: /spiffe-workload-api
              readOnly: true
            - name: spire-oidc-sockets
              mountPath: /run/spire/oidc-sockets
              readOnly: false
            - name: spire-oidc-config
              mountPath: /run/spire/oidc/config/oidc-discovery-provider.conf
              subPath: oidc-discovery-provider.conf
              readOnly: true
            - name: certdir
              mountPath: /certs
              readOnly: true
          readinessProbe:
            httpGet:
              path: /ready
              port: healthz
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /live
              port: healthz
            initialDelaySeconds: 5
            periodSeconds: 5
          resources: {}
        - name: spiffe-helper
          resources: {}
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          image: "ghcr.io/spiffe/spiffe-helper:0.10.0@sha256:95f5000aa1e0aadbfde20d66f1ad25733034162825aa51cc922ac78365bb8ee8"
          imagePullPolicy: IfNotPresent
          args:
            - -config
            - /etc/spiffe-helper.conf
          volumeMounts:
            - name: spiffe-workload-api
              mountPath: /spiffe-workload-api
              readOnly: true
            - name: spire-oidc-config
              mountPath: /etc/spiffe-helper.conf
              subPath: spiffe-helper.conf
              readOnly: true
            - name: certdir
              mountPath: /certs
      volumes:
        - name: spiffe-workload-api
          csi:
            driver: "csi.spiffe.io"
            readOnly: true
        - name: spire-oidc-sockets
          emptyDir: {}
        - name: spire-oidc-config
          configMap:
            name: spire-spiffe-oidc-discovery-provider
        - name: nginx-tmp
          emptyDir: {}
        - name: certdir
          emptyDir: {}
